:poop: save changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,19 @@
 services:
-  localstack:
-    image: localstack/localstack:latest
-    container_name: localstack
-    ports:
-      - "4566:4566"
-    environment:
-      - SERVICES=sns,sqs,dynamodb
-      - AWS_ACCESS_KEY_ID=test
-      - AWS_SECRET_ACCESS_KEY=test
-      - GATEWAY_LISTEN=0.0.0.0:4566
-      - EAGER_SERVICE_LOADING=1
-    volumes:
-      - "localstack-data:/var/lib/localstack"
-      - "./scripts/init-localstack.sh:/etc/localstack/init/ready.d/init-localstack.sh"
-    networks:
-      - ualanet
-
   redis:
     image: redis:latest
-    container_name: set_add_value
-    command: [ "set_add_value-server", "--appendonly", "yes" ]
+    container_name: redis
+    command: [ "redis-server", "--appendonly", "yes" ]
     volumes:
-      - set_add_value-data:/data
+      - redis-data:/data
     ports:
       - "6379:6379"
     networks:
       - ualanet
-
-  users-service:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: users-service:latest
-    container_name: users-service
-    depends_on:
-      localstack:
-        condition: service_healthy
-    environment:
-      - AWS_ACCESS_KEY_ID=test
-      - AWS_SECRET_ACCESS_KEY=test
-      - AWS_REGION=us-east-1
-    networks:
-      - ualanet
-    ports:
-      - "8086:8080"
 
 networks:
   ualanet:
     driver: bridge
 
 volumes:
-  localstack-data:
-    driver: local
   redis-data:
     driver: local
