--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,32 @@
 services:
   redis:
     image: redis:latest
-    container_name: redis
-    command: [ "redis-server", "--appendonly", "yes" ]
+    container_name: set_add_value
+    command: [ "set_add_value-server", "--appendonly", "yes" ]
     volumes:
-      - redis-data:/data
+      - set_add_value-data:/data
     ports:
       - "6379:6379"
     networks:
       - ualanet
+
+  users-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: users-service:latest
+    container_name: users-service
+    depends_on:
+      redis:
+        condition: service_started
+    environment:
+      - AWS_ACCESS_KEY_ID=test
+      - AWS_SECRET_ACCESS_KEY=test
+      - AWS_REGION=us-east-1
+    networks:
+      - ualanet
+    ports:
+      - "8086:8080"
 
 networks:
   ualanet:
